[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/12-Live and Coins/life_bar_6.png" type="Texture" id=1]
[ext_resource path="res://scripts/management/hud.gd" type="Script" id=2]
[ext_resource path="res://assets/12-Live and Coins/diamond.png" type="Texture" id=3]
[ext_resource path="res://assets/15-Fonts/antiquity-print.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_level"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_game"
} ]
}

[node name="HUD" type="CanvasLayer" groups=[
"Interface",
]]
script = ExtResource( 2 )
health_texture = [ "res://assets/12-Live and Coins/life_bar_0.png", "res://assets/12-Live and Coins/life_bar_1.png", "res://assets/12-Live and Coins/life_bar_2.png", "res://assets/12-Live and Coins/life_bar_3.png", "res://assets/12-Live and Coins/life_bar_4.png", "res://assets/12-Live and Coins/life_bar_5.png", "res://assets/12-Live and Coins/life_bar_6.png" ]

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Interface"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 10.0
margin_bottom = -137.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMargin" type="Control" parent="Interface/HBoxContainer"]
margin_right = 5.0
margin_bottom = 43.0
rect_min_size = Vector2( 5, 0 )

[node name="VBoxLife" type="VBoxContainer" parent="Interface/HBoxContainer"]
margin_left = 5.0
margin_right = 285.0
margin_bottom = 43.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="Control" parent="Interface/HBoxContainer/VBoxLife"]
margin_right = 280.0
margin_bottom = 5.0
rect_min_size = Vector2( 280, 5 )

[node name="HealthGUI" type="TextureRect" parent="Interface/HBoxContainer/VBoxLife"]
margin_top = 5.0
margin_right = 280.0
margin_bottom = 39.0
rect_min_size = Vector2( 66, 34 )
texture = ExtResource( 1 )

[node name="VBoxScore" type="VBoxContainer" parent="Interface/HBoxContainer"]
margin_left = 285.0
margin_right = 314.0
margin_bottom = 43.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="Control" parent="Interface/HBoxContainer/VBoxScore"]
margin_right = 29.0
margin_bottom = 17.5
rect_min_size = Vector2( 29, 17.5 )

[node name="DiamondGUI" type="TextureRect" parent="Interface/HBoxContainer/VBoxScore"]
margin_top = 17.0
margin_right = 29.0
margin_bottom = 26.0
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="Interface/HBoxContainer/VBoxScore/DiamondGUI"]
margin_left = -39.6422
margin_top = -9.98493
margin_right = 0.357849
margin_bottom = 14.0151
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMargin" type="Control" parent="Interface/HBoxContainer"]
margin_left = 314.0
margin_right = 319.0
margin_bottom = 43.0
rect_min_size = Vector2( 5, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "fade_out"
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 2 )
